--- a/index.html
+++ b/index.html
@@ -3,148 +3,179 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>大安運動中心 人流監測</title>
+  <title>臺北市運動中心人流監測（全館）</title>
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans TC", "PingFang TC", "Microsoft JhengHei", Arial, sans-serif; margin: 24px; }
     header { display:flex; flex-wrap:wrap; gap:12px; align-items:center; justify-content:space-between; }
-    .controls { display:flex; gap:12px; align-items:center; }
-    .cards { display:grid; grid-template-columns: 1fr; gap: 24px; margin-top: 16px; }
-    .card { border: 1px solid #e5e7eb; border-radius: 16px; padding: 16px; box-shadow: 0 2px 6px rgba(0,0,0,0.04); }
+    .controls { display:flex; flex-wrap:wrap; gap:12px; align-items:center; }
+    .chips { display:flex; flex-wrap:wrap; gap:8px; max-height: 160px; overflow:auto; padding:8px; border:1px solid #e5e7eb; border-radius:12px; }
+    .chip { display:inline-flex; align-items:center; gap:6px; padding:4px 10px; border:1px solid #e5e7eb; border-radius:999px; }
     .muted { color:#6b7280; font-size: 0.9rem; }
-    @media (min-width: 960px) {
-      .cards { grid-template-columns: 1fr 1fr; }
-    }
-    .footer { margin-top: 32px; color:#6b7280; font-size: 0.85rem; }
-    input, select { padding:6px 8px; border-radius: 10px; border:1px solid #e5e7eb; }
+    .footer { margin-top: 18px; color:#6b7280; font-size:0.85rem; }
+    input[type="date"] { padding:6px 8px; border-radius: 10px; border:1px solid #e5e7eb; }
     label { font-size: 0.9rem; color:#374151; }
-    .badge { padding: 2px 8px; border-radius: 999px; background: #eef2ff; color:#3730a3; margin-left:6px; font-size:0.8rem; }
+    .msg { margin-top: 8px; color:#6b7280; }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-luxon@1.3.1/dist/chartjs-adapter-luxon.umd.min.js"></script>
 </head>
 <body>
-  <header>
-    <div>
-      <h1>大安運動中心 人流監測 <span class="badge">Beta</span></h1>
-      <div class="muted">資料每 5 分鐘更新；頁面每 1 分鐘自動刷新。</div>
-    </div>
-    <div class="controls">
-      <label>選擇日期： <input type="date" id="datePicker"></label>
-      <label>
-        區域：
-        <select id="areaFilter">
-          <option value="all">游泳池 + 健身房</option>
-          <option value="游泳池">只看 游泳池</option>
-          <option value="健身房">只看 健身房</option>
-        </select>
-      </label>
-    </div>
-  </header>
-
-  <section class="cards">
-    <div class="card">
-      <h3>即時人數（折線圖）</h3>
-      <canvas id="chartCount"></canvas>
-    </div>
-    <div class="card">
-      <h3>使用率 %（折線圖）</h3>
-      <canvas id="chartOcc"></canvas>
-    </div>
-  </section>
-
-  <div class="footer">
-    資料來源：<a href="https://booking-tpsc.sporetrofit.com/Home/LocationPeopleNum" target="_blank" rel="noopener">臺北市運動中心預約系統</a>。
-    若網站結構變動導致解析失效，請回報或調整爬蟲規則。
+<header>
+  <div>
+    <h1>臺北市運動中心人流監測（全館）</h1>
+    <div class="muted">數據每次工作流抓取後追加保存；本頁每 <b>30 秒</b> 自動更新。</div>
   </div>
+  <div class="controls">
+    <label>日期： <input type="date" id="datePicker"></label>
+    <label>
+      區域：
+      <select id="areaSelect">
+        <option value="游泳池">游泳池</option>
+        <option value="健身房">健身房</option>
+      </select>
+    </label>
+    <button id="selectAll">全選</button>
+    <button id="clearAll">全不選</button>
+  </div>
+</header>
 
-  <script>
-    const CSV_URL = "data/da_an_people.csv"; // 由 GitHub Actions 生成/更新
-    let countChart, occChart;
+<section style="margin-top:16px">
+  <div style="margin-bottom:8px">選擇要顯示的館：</div>
+  <div id="centerChips" class="chips"></div>
+  <div class="msg" id="statusMsg"></div>
+  <canvas id="chart" height="110"></canvas>
+</section>
 
-    function parseCSV(text) {
-      const lines = text.trim().split(/\r?\n/);
-      lines.shift(); // remove header
-      const rows = lines.filter(Boolean).map(l => {
-        const [timestamp, center, area, current, capacity, occ] = l.split(",");
-        return { timestamp, center, area, current: +current, capacity: +capacity, occupancy_pct: +occ };
-      });
-      return rows;
+<div class="footer">
+  資料來源：<a href="https://booking-tpsc.sporetrofit.com/Home/LocationPeopleNum" target="_blank" rel="noopener">臺北市運動中心預約系統</a>。
+</div>
+
+<script>
+const CSV_URL = "data/da_an_people.csv"; // 若你換成 all_people.csv，這裡也要改
+let chart;
+
+function parseCSV(text) {
+  const lines = text.trim().split(/\r?\n/);
+  const header = lines.shift().split(",");
+  // header: timestamp,code,name,area,current,capacity,occupancy_pct
+  return lines.filter(Boolean).map(l => {
+    const [timestamp, code, name, area, current, capacity] = l.split(",", 7);
+    return {
+      timestamp, code, name, area,
+      current: +current, capacity: +capacity
+    };
+  });
+}
+
+function groupBy(arr, keyFn) {
+  const m = new Map();
+  for (const r of arr) {
+    const k = keyFn(r);
+    if (!m.has(k)) m.set(k, []);
+    m.get(k).push(r);
+  }
+  return m;
+}
+
+function buildChips(centerNames) {
+  const wrap = document.getElementById("centerChips");
+  wrap.innerHTML = "";
+  for (const name of centerNames) {
+    const id = "chk_" + name;
+    const chip = document.createElement("label");
+    chip.className = "chip";
+    chip.innerHTML = `<input type="checkbox" id="${id}" checked> ${name}`;
+    wrap.appendChild(chip);
+  }
+}
+
+function getSelectedCenters() {
+  const wrap = document.getElementById("centerChips");
+  return Array.from(wrap.querySelectorAll("input[type=checkbox]:checked")).map(x =>
+    x.id.replace(/^chk_/, "")
+  );
+}
+
+function makeDataset(label, points) {
+  return { label, data: points, parsing:false, borderWidth:2, pointRadius:0, tension:0.2 };
+}
+
+function updateChart(rows) {
+  const area = document.getElementById("areaSelect").value;
+  const dayRows = rows.filter(r => r.area === area);
+  const selected = new Set(getSelectedCenters());
+
+  const byCenter = groupBy(dayRows.filter(r => selected.has(r.name)), r => r.name);
+  const datasets = [];
+  for (const [name, list] of byCenter.entries()) {
+    list.sort((a,b) => a.timestamp.localeCompare(b.timestamp));
+    datasets.push( makeDataset(name, list.map(r => ({x:new Date(r.timestamp), y:r.current}))) );
+  }
+
+  if (chart) chart.destroy();
+  const ctx = document.getElementById("chart").getContext("2d");
+  chart = new Chart(ctx, {
+    type: "line",
+    data: { datasets },
+    options: {
+      parsing:false,
+      animation:false,
+      scales: {
+        x: { type:'time', time:{ unit:'minute' }, ticks:{ autoSkip:true, maxTicksLimit:12 } },
+        y: { beginAtZero:true, title: { display:true, text: "人數" } }
+      },
+      plugins: { legend: { position:'bottom' } }
     }
+  });
+}
 
-    function groupByArea(rows, col) {
-      const map = {};
-      for (const r of rows) {
-        if (!map[r.area]) map[r.area] = [];
-        map[r.area].push({ x: new Date(r.timestamp), y: col === "current" ? r.current : r.occupancy_pct });
-      }
-      for (const k of Object.keys(map)) map[k].sort((a,b) => a.x - b.x);
-      return map;
-    }
+async function loadAndRender() {
+  const status = document.getElementById("statusMsg");
+  status.textContent = "載入中…";
+  const res = await fetch(CSV_URL + "?_=" + Date.now(), { cache:"no-store" });
+  const text = await res.text();
+  const allRows = parseCSV(text);
 
-    function makeDataset(label, dataPoints) {
-      return { label, data: dataPoints, tension: 0.2, pointRadius: 0, borderWidth: 2 };
-    }
+  const datePick = document.getElementById("datePicker").value;
+  const day = datePick || new Date().toISOString().slice(0,10);
+  const rows = allRows.filter(r => r.timestamp.slice(0,10) === day);
 
-    function updateCharts(rows) {
-      const areaSel = document.getElementById("areaFilter").value;
-      let filtered = rows;
-      if (areaSel !== "all") filtered = rows.filter(r => r.area === areaSel);
+  // 第一次：建館清單
+  const wrap = document.getElementById("centerChips");
+  if (!wrap.childElementCount) {
+    const centers = Array.from(new Set(rows.map(r => r.name))).sort();
+    buildChips(centers);
+    document.getElementById("centerChips").addEventListener("change", () => updateChart(rows));
+    document.getElementById("selectAll").onclick = () => {
+      wrap.querySelectorAll("input[type=checkbox]").forEach(c => c.checked = true);
+      updateChart(rows);
+    };
+    document.getElementById("clearAll").onclick = () => {
+      wrap.querySelectorAll("input[type=checkbox]").forEach(c => c.checked = false);
+      updateChart(rows);
+    };
+  }
 
-      const byCount = groupByArea(filtered, "current");
-      const byOcc = groupByArea(filtered, "occupancy_pct");
+  if (rows.length === 0) {
+    status.textContent = "選定日期暫無資料（等工作流跑完或切換其他日期）。";
+    if (chart) chart.destroy();
+    return;
+  }
+  status.textContent = `共 ${rows.length} 筆資料。`;
+  updateChart(rows);
+}
 
-      if (countChart) countChart.destroy();
-      if (occChart) occChart.destroy();
+// 初始化：今天 + 游泳池
+(function init(){
+  const today = new Date().toISOString().slice(0,10);
+  document.getElementById("datePicker").value = today;
+  document.getElementById("datePicker").addEventListener("change", loadAndRender);
+  document.getElementById("areaSelect").addEventListener("change", loadAndRender);
 
-      const ctx1 = document.getElementById("chartCount").getContext("2d");
-      countChart = new Chart(ctx1, {
-        type: "line",
-        data: { datasets: Object.keys(byCount).map(area => makeDataset(area, byCount[area])) },
-        options: {
-          parsing: false,
-          scales: {
-            x: { type: 'time', time: { unit: 'minute' }, ticks: { autoSkip: true, maxTicksLimit: 10 } },
-            y: { beginAtZero: true, title: { display: true, text: "人數" } }
-          },
-          plugins: { legend: { position: 'bottom' } }
-        }
-      });
-
-      const ctx2 = document.getElementById("chartOcc").getContext("2d");
-      occChart = new Chart(ctx2, {
-        type: "line",
-        data: { datasets: Object.keys(byOcc).map(area => makeDataset(area, byOcc[area])) },
-        options: {
-          parsing: false,
-          scales: {
-            x: { type: 'time', time: { unit: 'minute' }, ticks: { autoSkip: true, maxTicksLimit: 10 } },
-            y: { beginAtZero: true, title: { display: true, text: "使用率 (%)" } }
-          },
-          plugins: { legend: { position: 'bottom' } }
-        }
-      });
-    }
-
-    async function loadAndRender() {
-      const datePick = document.getElementById("datePicker").value;
-      const todayISO = new Date().toISOString().slice(0,10);
-      const targetDate = datePick || todayISO;
-      const res = await fetch(CSV_URL + "?_=" + Date.now(), { cache: "no-store" });
-      const text = await res.text();
-      const rows = parseCSV(text);
-      const dayRows = rows.filter(r => r.timestamp.slice(0,10) === targetDate);
-      updateCharts(dayRows);
-    }
-
-    (function init() {
-      const today = new Date().toISOString().slice(0,10);
-      document.getElementById("datePicker").value = today;
-      document.getElementById("datePicker").addEventListener("change", loadAndRender);
-      document.getElementById("areaFilter").addEventListener("change", loadAndRender);
-      loadAndRender();
-      setInterval(loadAndRender, 60 * 1000);
-    })();
-  </script>
+  loadAndRender();
+  setInterval(loadAndRender, 30 * 1000); // 每 30 秒更新一次頁面資料
+})();
+</script>
 </body>
 </html>
