--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <header>
   <div>
-    <h1>臺北市運動中心人流監測test</h1>
+    <h1>臺北市運動中心人流監測tes</h1>
     <div class="muted">資料每 1 分鐘抓取追加保存；本頁每 <b>30 秒</b> 自動刷新。</div>
     <div id="status" class="muted"></div>
   </div>
