--- a/index.html
+++ b/index.html
@@ -59,16 +59,39 @@
 </div>
 
 <script>
-const CSV_URL = "data/all_people.csv";   // 與工作流輸出一致
+const CSV_URL = "data/all_people.csv";
 let allRows = [];
 let countChart, occChart;
 
-/** 兼容 6 位毫秒的 ISO（裁到 3 位），用 Luxon 轉成 Date；失敗則回退原生 Date.parse */
-function tsToDate(iso) {
-  const fixed = iso.replace(/(\.\d{3})\d+(?=[+Z])/, '$1');  // .123456+08:00 -> .123+08:00
+/** 盡量強韌的時間解析器：裁毫秒到3位 → Luxon → 正則手工解析 → Date.parse */
+function tsToDate(raw) {
+  const iso = (raw || "").trim();
+  // 把 .123456+08:00 裁為 .123+08:00
+  const fixed = iso.replace(/(\.\d{3})\d+(?=[+Z])/, '$1');
+
+  // 1) 優先走 Luxon
   const dt = luxon.DateTime.fromISO(fixed);
   if (dt.isValid) return dt.toJSDate();
-  const t = Date.parse(iso);
+
+  // 2) 正則手工解析（YYYY-MM-DDTHH:mm:ss(.ffffff)?(+/-HH:MM)?）
+  const m = fixed.match(
+    /^(\d{4})-(\d{2})-(\d{2})T(\d{2}):(\d{2}):(\d{2})(?:\.(\d{1,6}))?([+-]\d{2}):?(\d{2})?$/
+  );
+  if (m) {
+    const [_, Y, Mo, D, H, Mi, S, frac="0", offH="+00", offM="00"] = m;
+    const ms = Math.floor(parseInt(frac.padEnd(3, '0').slice(0,3), 10)); // 取前三位毫秒
+    const tzSign = (offH.startsWith('-') ? -1 : 1);
+    const tzHours = Math.abs(parseInt(offH,10));
+    const tzMins  = parseInt(offM,10);
+    const offsetMin = tzSign * (tzHours*60 + tzMins);
+
+    // 先當成本地 ISO，再轉為 UTC 毫秒
+    const utcMs = Date.UTC(+Y, +Mo-1, +D, +H, +Mi, +S, ms) - offsetMin*60*1000;
+    return new Date(utcMs);
+  }
+
+  // 3) 最後兜底
+  const t = Date.parse(fixed);
   return isNaN(t) ? new Date() : new Date(t);
 }
 
@@ -79,9 +102,8 @@ function parseCSV(text) {
   // timestamp,code,name,area,current,capacity,occupancy_pct
   return lines.filter(Boolean).map(l => {
     const p = l.split(",", 7);
-    // 做 trim，防止不可視空白導致篩選不到
     return {
-      timestamp: p[0],
+      timestamp: (p[0]||"").trim(),
       code: (p[1]||"").trim(),
       name: (p[2]||"").trim(),
       area: (p[3]||"").trim(),
@@ -109,7 +131,16 @@ function populateCenters(sel, names, keepValue=true) {
 }
 
 function makeDataset(label, points) {
-  return { label, data: points, parsing:false, borderWidth:2, pointRadius:0, tension:0.2 };
+  return {
+    label,
+    data: points,
+    parsing:false,
+    borderWidth:2,
+    pointRadius:2,      // 單點也可見
+    hitRadius:6,
+    tension:0.2,
+    showLine:true
+  };
 }
 
 function seriesFor(rows, centerName, mode) {
@@ -139,6 +170,7 @@ function renderCharts(rows, centerName, mode) {
     data: { datasets: s.count },
     options: {
       parsing:false, animation:false,
+      spanGaps:true,
       scales: {
         x: { type:'time', time:{ unit:'minute' }, ticks:{ autoSkip:true, maxTicksLimit:12 } },
         y: { beginAtZero:true, title:{ display:true, text:"人數" } }
@@ -153,6 +185,7 @@ function renderCharts(rows, centerName, mode) {
     data: { datasets: s.occ },
     options: {
       parsing:false, animation:false,
+      spanGaps:true,
       scales: {
         x: { type:'time', time:{ unit:'minute' }, ticks:{ autoSkip:true, maxTicksLimit:12 } },
         y: { beginAtZero:true, suggestedMax:100, title:{ display:true, text:"占用率 (%)" } }
